name: mars-rover
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: jayas@cisco.com
author: jayas
extra-source-files:
    ChangeLog.md
    README.md

executable mars-rover-exe
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , transformers
    , mtl
  other-modules:
      Rover
    , RoverM
    , RoverS
  default-language: Haskell2010
