name: statemonad
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: jayas@cisco.com
author: jayas
extra-source-files:
    ChangeLog.md

library
    exposed-modules:
        MonadS
    build-depends:
        base >=4.10 && <4.11,
        random >=1.1 && <1.2,
        transformers >=0.5.5.0 && <0.5.6.0
    default-language: Haskell2010
    hs-source-dirs: src

